add publish task

--- a/src/main/resources/templates/person.html
+++ b/src/main/resources/templates/person.html
@@ -35,7 +35,7 @@
                 <li> <a th:href="@{/personinfo(username=${session.username})}">查看个人详细信息</a></li>
                 <li><a th:href="@{/change(username=${session.username})}">修改个人信息</a>
                 <li><a href="https://mail.qq.com/cgi-bin/loginpage">发送邮件</a></li>
-                <li><a href="/login">退出</a></li>
+                <li><a href="/logout">退出</a></li>
             </ul>
         </div>
     </div>
