--- a/src/main/resources/templates/calendar_manage.html
+++ b/src/main/resources/templates/calendar_manage.html
@@ -184,22 +184,16 @@
           <div class="col-md-3">
             <div class="card">
               <div class="card-header">
-                <h4 class="card-title">事件等级</h4>
+                <h4 class="card-title">待分配事件</h4>
               </div>
               <div class="card-body">
                 <!-- the events -->
                 <div id="external-events">
-                  <div class="external-event bg-success">故障（已处理）</div>
-				  <div class="external-event bg-info">日常维护（已完成）</div>
-                  <div class="external-event bg-warning">日常维护（未完成）</div>
-                  <!--<div class="external-event bg-primary">较重要事件</div>-->
-                  <div class="external-event bg-danger">故障提醒</div>
-                  <div class="checkbox">
-                    <label for="drop-remove">
-                      <input type="checkbox" id="drop-remove">
-                      完成后删除
-                    </label>
-                  </div>
+                  <!--                  <div class="external-event bg-success">故障（已处理）</div>-->
+                  <!--				  <div class="external-event bg-info">日常维护（已完成）</div>-->
+                  <!--                  <div class="external-event bg-warning">日常维护（未完成）</div>-->
+                  <!--                  &lt;!&ndash;<div class="external-event bg-primary">较重要事件</div>&ndash;&gt;-->
+                  <!--                  <div class="external-event bg-danger">故障提醒</div>-->
                 </div>
               </div>
               <!-- /.card-body -->
@@ -213,22 +207,28 @@
                 <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
                   <!--<button type="button" id="color-chooser-btn" class="btn btn-info btn-block dropdown-toggle" data-toggle="dropdown">Color <span class="caret"></span></button>-->
                   <ul class="fc-color-picker" id="color-chooser">
-                    <li><a class="text-primary" href="#"><i class="fa fa-square"></i></a></li>
                     <li><a class="text-warning" href="#"><i class="fa fa-square"></i></a></li>
-                    <li><a class="text-success" href="#"><i class="fa fa-square"></i></a></li>
                     <li><a class="text-danger" href="#"><i class="fa fa-square"></i></a></li>
-                    <li><a class="text-muted" href="#"><i class="fa fa-square"></i></a></li>
                   </ul>
                 </div>
                 <!-- /btn-group -->
-                <div class="input-group">
-                  <input id="new-event" type="text" class="form-control" placeholder="事件标题">
-
-                  <div class="input-group-append">
-                    <button id="add-new-event" type="button" class="btn btn-primary btn-flat">添加</button>
-                  </div>
-                  <!-- /btn-group -->
+                <!--                <div class="input-group">-->
+                <input id="new-event-title" type="text" class="form-control" placeholder="事件标题">
+                <br>
+                <textarea id="new-event-detail" class="form-control" placeholder="请输入相关事件信息" rows="10" cols="5"></textarea>
+                <br>请选择相关负责人
+                <select class="form-control">
+                  <option value="Hello">维修人员1</option>
+                  <option value="world">维修人员2</option>
+                  <option value="world">维护人员1</option>
+                  <option value="world">维护人员2</option>
+                </select>
+                <br>
+                <div class="input-group-append">
+                  <button id="add-new-event" type="button" class="btn btn-warning btn-flat">添加</button>
                 </div>
+                <!-- /btn-group -->
+                <!--                </div>-->
                 <!-- /input-group -->
               </div>
             </div>
@@ -305,7 +305,7 @@
         $(this).draggable({
           zIndex        : 1070,
           revert        : true, // will cause the event to go back to its
-          revertDuration: 0  //  original position after the drag
+          revertDuration: 0 , //  original position after the drag
         })
 
       })
@@ -318,8 +318,8 @@
     //Date for the calendar events (dummy data)
     var date = new Date()
     var d    = date.getDate(),
-        m    = date.getMonth(),
-        y    = date.getFullYear()
+            m    = date.getMonth(),
+            y    = date.getFullYear()
     $('#calendar').fullCalendar({
       header    : {
         left  : 'prev,next today',
@@ -340,19 +340,19 @@
           backgroundColor: '#00a65a', //red
           borderColor    : '#00a65a' //red
         },
-		{
+        {
           title          : '日常维护',
           start          : new Date(y, m, 8),
           backgroundColor: '#00a65a', //red
           borderColor    : '#00a65a' //red
         },
-		{
+        {
           title          : '设备故障',
           start          : new Date(y, m, 19),
           backgroundColor: '#f56954', //red
           borderColor    : '#f56954' //red
         },
-				{
+        {
           title          : '日常维护',
           start          : new Date(y, m, 16),
           backgroundColor: '#0073b7', //red
@@ -374,7 +374,7 @@
           borderColor    : '#00a65a' //Success (green)
         }
       ],
-      editable  : true,
+      editable  : false,
       droppable : true, // this allows things to be dropped onto the calendar !!!
       drop      : function (date, allDay) { // this function is called when something is dropped
 
@@ -390,156 +390,9 @@
         copiedEventObject.allDay          = allDay
         copiedEventObject.backgroundColor = $(this).css('background-color')
         copiedEventObject.borderColor     = $(this).css('border-color')
-
-		  var startDateInformation=date.toString();
-		  var informationSet=startDateInformation.split(/\s+/)
-
-		  var monthEnglish=informationSet[1];
-		  var date=informationSet[2];
-		  var year=informationSet[3];
-
-		  console.log("ME:"+monthEnglish+"---"+date)
-
-		  console.log(informationSet)
-
-		  var month=null;
-		  switch (monthEnglish) {
-			  case "Jan": {
-				  month=0;
-				  break;
-			  }
-			  case "Feb":{
-				  month=1;
-				  break;
-			  }
-			  case "Mar": {
-				  month=2;
-				  break;
-			  }
-			  case "Apr":{
-				  month=3;
-				  break;
-			  }
-			  case "May":{
-			  	month=4;
-			  	break;
-			  }
-			  case "Jun":{
-			  	month=5;
-			  	break;
-			  }
-			  case "Jul":{
-			  	month=6;
-			  	break;
-			  }
-			  case "Aug":{
-			  	month=7;
-			  	break;
-			  }
-			  case "Aug":{
-			  	month=7;
-			  	break;
-			  }
-			  case "Sep": {
-			  	month=8
-				break;
-			  }
-			  case 'Oct':{
-			  	month=9
-				break;
-			  }
-			  case 'Nov': {
-			  	month=10
-				  break;
-			  }
-			  case 'Dec':{
-				  month=11
-				  break;
-			  }
-			  default:{
-				  month=13
-			  }
-		  }
-		  console.log("M:"+month);
-
-		  Dialog.prompt({
-			  title:"请输入任务名称",
-			  placeholder: "任务名称",
-			  autofocus: true,
-			  type: "text",
-			  maxlength: 20,
-			  callback: function ( value, input, okBtn ) {
-				  if ( value ==null ) {
-					  Dialog.prompt.errorFeedBack( "尚未输入任务名称" );
-					  Dialog.close();
-				  } else {
-					  copiedEventObject.title=value;
-					  Dialog.close();
-					  Dialog.prompt({
-						  title: "请输入任务详情",
-						  placeholder: "任务详情",
-						  autofocus: true,
-						  type: "textarea",
-						  maxlength: 100,
-						  callback: function ( value, input, okBtn ) {
-							  if ( value ==null ) {
-								  Dialog.prompt.errorFeedBack( "尚未输入详细信息" );
-							  } else {
-								  copiedEventObject.information=value
-								  Dialog.close();
-								  Dialog.prompt({
-									  title: "请输入任务时长",
-									  placeholder: "任务时长(单位：天)",
-									  autofocus: true,
-									  type: "text",
-									  maxlength: 2,
-									  callback: function ( value, input, okBtn ) {
-										  if ( isNaN(value) ) {
-											  alert("请输入数字")
-											  value=0;
-										  } else {
-											  console.log(year+"-----"+month+"------"+date);
-											  console.log("Value:"+value+"====Nowdays:"+(Number(date)+Number(value)))
-											  copiedEventObject.end=new Date(year,month,Number(date)+Number(value));
-											  console.log(copiedEventObject.end)
-											  // 成功则关闭
-											  Dialog.close();
-											  Dialog.prompt({
-												  title: "请输入负责人员编号",
-												  placeholder: "人员编号",
-												  autofocus: true,
-												  type: "text",
-												  maxlength: 20,
-												  callback: function ( value, input, okBtn ) {
-													  if ( value ==null ) {
-														  Dialog.prompt.errorFeedBack( "尚未输入人员名单" );
-													  } else {
-														  $('#calendar').fullCalendar('renderEvent', copiedEventObject, true)
-														  Dialog.close();
-													  }
-												  }
-											  });
-										  }
-									  }
-								  })
-							  }
-						  }
-
-					  });
-
-				  }
-			  }
-		  });
-
-        // render the event on the calendar
-        // the last `true` argument determines if the event "sticks" (http://arshaw.com/fullcalendar/docs/event_rendering/renderEvent/)
-		  //$('#calendar').fullCalendar('renderEvent', copiedEventObject, true)
-         //copiedEventObject
-
-
-
+        $('#calendar').fullCalendar('renderEvent', copiedEventObject, true)
         // is the "remove after drop" checkbox checked?
-        if ($('#drop-remove').is(':checked')) {
+        if (!$('#drop-remove').is(':checked')) {
           // if so, remove the element from the "Draggable Events" list
           $(this).remove()
         }
@@ -548,7 +401,7 @@
     })
 
     /* ADDING EVENTS */
-    var currColor = '#3c8dbc' //Red by default
+    var currColor = '#f39c12' //Red by default
     //Color chooser button
     var colorChooser = $('#color-chooser-btn')
     $('#color-chooser > li > a').click(function (e) {
@@ -564,10 +417,11 @@
     $('#add-new-event').click(function (e) {
       e.preventDefault()
       //Get value and make sure it is not null
-      var val = $('#new-event').val()
-      if (val.length == 0) {
+      var name = $('#new-event-title').val()
+      if (name.length == 0) {
         return
       }
+
 
       //Create events
       var event = $('<div />')
@@ -576,14 +430,18 @@
         'border-color'    : currColor,
         'color'           : '#fff'
       }).addClass('external-event')
-      event.html(val)
+      event.html(name)
 
       $('#external-events').prepend(event)
 
       //Add draggable funtionality
+
       ini_events(event)
+
       //Remove event from text input
-      $('#new-event').val('')
+      $('#new-event-title').val('')
+      $('#new-event-detail').val('')
+
     })
   })
 </script>
