--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,11 +2,19 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
-    <title>登陆界面</title>
+    <title>影院放映质量信息系统 | 登陆</title>
     <link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
-        body{background: url("42846c56843811b947609f38bd7fc439.jpg") no-repeat;background-size:cover;font-size: 16px;}
-        .form{background: rgba(255,255,255,0.2);width:400px;margin:100px auto;}
+        body {
+            background-size:cover;
+            font-size: 16px;
+            background-color: #00c0ef;
+        }
+
+        .form {
+            background: rgba(255,255,255,0.2);
+            width:400px;
+            margin:100px auto;}
     </style>
 </head>
 <body>
@@ -25,8 +33,10 @@
             <div>
                 <p th:text="${information}" style="color: red" align="center">这里是信息提示.</p>
             </div>
+            <div align="center">
+                <h3>影院放映质量信息服务系统</h3>
+            </div>
             <form class="form-horizontal col-sm-offset-3 col-md-offset-3" action="/logining">
-                <h3 class="form-title"><b>请您登陆个人信息系统</b></h3>
                 <div class="col-sm-9 col-md-9">
                     <div class="form-group">
                         <label class=" control-label" >用户名:</label>
