--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8" />
-    <title>bootstrap案例</title>
+    <title>影院放映质量信息系统 | 注册</title>
     <!--用百度的静态资源库的cdn安装bootstrap环境-->
-    <!-- Bootstrap 核心 CSS 文件 -->
     <link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <script>
         $(function () {
@@ -16,16 +14,24 @@
         });
     </script>
     <style type="text/css">
-        body{background: url("42846c56843811b947609f38bd7fc439.jpg") no-repeat;background-size:cover;font-size: 16px;}
-        .form{background: rgba(255,255,255,0.2);width:400px;margin:100px auto;}
+        body {
+            /*background: url("42846c56843811b947609f38bd7fc439.jpg") no-repeat;*/
+            background-size:cover;
+            font-size: 16px;
+            background-color: #a4b2cb;
+        }
+        .form {
+            background: rgba(255,255,255,0.2);
+            width:400px;
+            margin:100px auto;}
 
     </style>
 </head>
 <body>
 
 <div class="form row">
+    <div align="center"><h3>用户注册</h3></div>
     <form class="form-horizontal col-sm-offset-3 col-md-offset-3" id="register_form" action="/registering" method="post">
-        <h3 class="form-title"><b>注册你的信息</b></h3>
         <div class="col-sm-9 col-md-9">
             <div class="form-group">
                 <label class=" control-label" >用户名:</label>
@@ -45,24 +51,21 @@
             </div>
             <div class="form-group">
                 <label class=" control-label">性别:</label>
-                <input type="radio" name="sex" value="boy" checked><b>男(默认)</b>
+                <input type="radio" name="sex" value="boy" checked><b>男</b>
                 <input type="radio" name="sex" value="girl"><b>女</b>
             </div>
             <div class="form-group">
-                <label class=" control-label">生日:</label>
-                <input type="date" name="birthday" >
+                <label class="control-label">生日:</label>
+                <input class="form-control required" type="date" name="birthday" >
             </div>
             <div class="form-group">
                 <label class=" control-label">自我介绍:</label>
-                <textarea rows="5" cols="25" name="myself"></textarea>
+                <input class="form-control required" type="text" placeholder="介绍自己" name="myself">
             </div>
             <div class="form-group">
                 <input type="button" class="btn btn-info pull-left" id="back" value="返回"/>
-
-                <input type="reset" class="btn btn-info pull-left"  value="重置"/>
-
+<!--                <input type="reset" class="btn btn-info pull-left"  value="重置"/>-->
                 <input type="submit" class="btn btn-success pull-right" value="注册 "/>
-
             </div>
         </div>
     </form>
