--- a/src/main/resources/templates/calendar_manage.html
+++ b/src/main/resources/templates/calendar_manage.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>影院放映质量管理信息系统 | Calendar</title>
+  <title>影院放映质量管理信息系统 | 日常工作管理</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="plugins/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" th:href="@{/plugins/font-awesome/css/font-awesome.min.css}">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- fullCalendar 2.2.5-->
-  <link rel="stylesheet" href="plugins/fullcalendar/fullcalendar.min.css">
-  <link rel="stylesheet" href="plugins/fullcalendar/fullcalendar.print.css" media="print">
+  <link rel="stylesheet" th:href="@{/plugins/fullcalendar/fullcalendar.min.css}">
+  <link rel="stylesheet" th:href="@{/plugins/fullcalendar/fullcalendar.print.css}" media="print">
   <!-- Theme style -->
-  <link rel="stylesheet" href="dist/css/adminlte.min.css">
+  <link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -167,6 +167,7 @@
           <div class="col-sm-6">
             <h1>日常工作管理</h1>
           </div>
+
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">主页</a></li>
@@ -266,23 +267,23 @@
 <!-- ./wrapper -->
 
 <!-- jQuery -->
-<script src="plugins/jquery/jquery.min.js"></script>
+<script th:src="@{/plugins/jquery/jquery.min.js}"></script>
 <!-- Bootstrap 4 -->
-<script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/plugins/bootstrap/js/bootstrap.bundle.min.js}"></script>
 <!-- jQuery UI 1.11.4 -->
 <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 <!-- Slimscroll -->
-<script src="plugins/slimScroll/jquery.slimscroll.min.js"></script>
+<script th:src="@{/plugins/slimScroll/jquery.slimscroll.min.js}"></script>
 <!-- FastClick -->
-<script src="plugins/fastclick/fastclick.js"></script>
+<script th:src="@{/plugins/fastclick/fastclick.js}"></script>
 <!-- AdminLTE App -->
-<script src="dist/js/adminlte.min.js"></script>
+<script th:src="@{/dist/js/adminlte.min.js}"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="dist/js/demo.js"></script>
+<script th:src="@{/dist/js/demo.js}"></script>
 <!-- fullCalendar 2.2.5 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js"></script>
-<script src="plugins/fullcalendar/fullcalendar.min.js"></script>
-<script src="dist/js/MiniDialog.min.js"></script>
+<script th:src="@{/plugins/fullcalendar/fullcalendar.min.js}"></script>
+<script th:src="@{/dist/js/MiniDialog.min.js}"></script>
 
 <!-- Page specific script -->
 <script>
@@ -435,9 +436,7 @@
       $('#external-events').prepend(event)
 
       //Add draggable funtionality
-
       ini_events(event)
-
       //Remove event from text input
       $('#new-event-title').val('')
       $('#new-event-detail').val('')
