--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -174,7 +174,7 @@
             <a href="#" class="nav-link">
                 <i class="nav-icon fa fa-search"></i>
                 <p>
-                    数据检索
+                    信息查询
                     <i class="fa fa-angle-left right"></i>
                 </p>
             </a>
@@ -182,51 +182,51 @@
                 <li class="nav-item">
                     <a href="/data_search" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
-                        <p>标准信息检索</p>
+                        <p>标准查询</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="/cinema_search" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
-                        <p>影院信息检索</p>
+                        <p>故障代码查询</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
-                        <p>设备信息检索</p>
+                        <p>常见故障查询</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
-                        <p>运维信息检索</p>
+                        <p>设备信息查询</p>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a href="/error_search" class="nav-link">
-                        <i class="fa fa-search nav-icon"></i>
-                        <p>故障信息检索</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="fa fa-search nav-icon"></i>
-                        <p>厂家信息检索</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="fa fa-search nav-icon"></i>
-                        <p>服务商信息检索</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="fa fa-search nav-icon"></i>
-                        <p>综合信息检索</p>
-                    </a>
-                </li>
+<!--                <li class="nav-item">-->
+<!--                    <a href="/error_search" class="nav-link">-->
+<!--                        <i class="fa fa-search nav-icon"></i>-->
+<!--                        <p>故障信息检索</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a href="#" class="nav-link">-->
+<!--                        <i class="fa fa-search nav-icon"></i>-->
+<!--                        <p>厂家信息检索</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a href="#" class="nav-link">-->
+<!--                        <i class="fa fa-search nav-icon"></i>-->
+<!--                        <p>服务商信息检索</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a href="#" class="nav-link">-->
+<!--                        <i class="fa fa-search nav-icon"></i>-->
+<!--                        <p>综合信息检索</p>-->
+<!--                    </a>-->
+<!--                </li>-->
             </ul>
         </li>
         <li class="nav-item has-treeview">
@@ -322,6 +322,15 @@
                     </a>
                 </li>
             </ul>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">
+                <i class="nav-icon fa fa-table"></i>
+                <p>
+                    课程学习
+                    <!--<i class="fa fa-angle-left right"></i>-->
+                </p>
+            </a>
         </li>
     </ul>
 </nav>
