--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,29 +34,36 @@
                 <p th:text="${information}" style="color: red" align="center">这里是信息提示.</p>
             </div>
             <div align="center">
-                <h3>影院放映质量信息服务系统</h3>
+                <h3 th:text="#{login.tip}">影院放映质量信息服务系统</h3>
             </div>
             <form class="form-horizontal col-sm-offset-3 col-md-offset-3" action="/logining">
                 <div class="col-sm-9 col-md-9">
                     <div class="form-group">
-                        <label class=" control-label" >用户名:</label>
-                        <input class="form-control required" type="text" placeholder="请输入用户名" name="username" autofocus="autofocus" maxlength="20"/>
+                        <label class=" control-label" th:text="#{login.username}">用户名:</label>
+                        <input class="form-control required" type="text" placeholder="请输入用户名" th:placeholder="#{login.username}" name="username" autofocus="autofocus" maxlength="20"/>
                     </div>
                     <div class="form-group">
-                        <label class=" control-label" >密码:</label>
-                        <input class="form-control required" type="password" placeholder="请输入密码" name="password" maxlength="20"/>
+                        <label class=" control-label" th:text="#{login.password}">密码:</label>
+                        <input class="form-control required" type="password" placeholder="请输入密码" th:placeholder="#{login.password}" name="password" maxlength="20"/>
                     </div>
                     <span th:text="${checknode}" style="color: red"></span>
                     <div class="form-group">
-                        <label class=" control-label" >验证码:</label>
-                        <input class="form-control required" type="text" placeholder="请输入验证码" name="checknode" maxlength="4"/>
-                        <img src='/checknode'><a href="/login">看不清,刷新试试</a>
+                        <label class=" control-label" th:text="#{login.captcha}">验证码:</label>
+                        <input class="form-control required" type="text" placeholder="请输入验证码" th:placeholder="#{login.captcha}" name="checknode" maxlength="4"/>
+                        <img src='/checknode'><a href="/login" th:text="#{login.cantsee}">看不清,刷新试试</a>
                     </div>
                     <div class="form-group">
                         <a href="/register">
-                            <input type="button" class="btn btn-success pull-left" value="注册"/>
+                            <input type="button" class="btn btn-success pull-left" th:value="#{login.register}" value="注册"/>
                         </a>
-                        <input type="submit" class="btn btn-success pull-right" value="登录"/>
+                        <input type="submit" class="btn btn-success pull-right" th:value="#{login.login}" value="登录"/>
+                    </div>
+                    <div class="form-group">
+                        <div class="text-center">
+                            <a  th:href="@{/login(l='zh_CN')}">中文</a>
+                            &nbsp;&nbsp;&nbsp;
+                            <a  th:href="@{/login(l='en_US')}">English</a>
+                        </div>
                     </div>
                 </div>
             </form>
