--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -162,13 +162,30 @@
             </ul>
         </li>
         <li class="nav-item">
-            <a href="/calendar_manage" class="nav-link">
+            <a href="#" class="nav-link">
                 <i class="nav-icon fa fa-calendar"></i>
                 <p>
                     日常工作管理
                     <!--<span class="badge badge-info right">2</span>-->
+                    <i class="right fa fa-angle-left"></i>
                 </p>
             </a>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="/calendar_manage" class="nav-link">
+                        <i class="fa fa-thumb-tack nav-icon"></i>
+                        <p>日常任务总览</p>
+                    </a>
+                </li>
+            </ul>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="/task_search" class="nav-link">
+                        <i class="fa fa-thumb-tack nav-icon"></i>
+                        <p>日常任务查询</p>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
