--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
     <title>影院放映质量信息系统 | 注册</title>
@@ -30,7 +30,12 @@
 <body>
 
 <div class="form row">
-    <div align="center"><h3>用户注册</h3></div>
+    <div>
+        <p th:text="${register_information}" style="color: red" align="center">这里是信息提示.</p>
+    </div>
+    <div align="center">
+        <h3>用户注册</h3>
+    </div>
     <form class="form-horizontal col-sm-offset-3 col-md-offset-3" id="register_form" action="/registering" method="post">
         <div class="col-sm-9 col-md-9">
             <div class="form-group">
@@ -43,7 +48,7 @@
             </div>
             <div class="form-group">
                 <label class=" control-label" >确认密码:</label>
-                <input class="form-control required" type="password" placeholder="请保持两次密码一致" name="password2"/>
+                <input class="form-control required" type="password" placeholder="请保持两次密码一致" name="password1"/>
             </div>
             <div class="form-group">
                 <label class=" control-label" >QQ:</label>
