--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,6 +6,11 @@
     <!--用百度的静态资源库的cdn安装bootstrap环境-->
     <link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+    <script type='text/javascript' th:src='@{/dist/js/jquery.particleground.js}'></script>
+    <script type='text/javascript' th:src='@{/dist/js/demo-login.js}'></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/dist/css/style.css}" />
     <script>
         $(function () {
             $("#back").click(function () {
@@ -13,69 +18,105 @@
             });
         });
     </script>
-    <style type="text/css">
-        body {
-            /*background: url("42846c56843811b947609f38bd7fc439.jpg") no-repeat;*/
-            background-size:cover;
-            font-size: 16px;
-            background-color: #a4b2cb;
-        }
-        .form {
-            background: rgba(255,255,255,0.2);
-            width:400px;
-            margin:100px auto;}
-
-    </style>
 </head>
 <body>
 
-<div class="form row">
-    <div>
-        <p th:text="${register_information}" style="color: red" align="center">这里是信息提示.</p>
-    </div>
-    <div align="center">
-        <h3>用户注册</h3>
-    </div>
-    <form class="form-horizontal col-sm-offset-3 col-md-offset-3" id="register_form" action="/registering" method="post">
-        <div class="col-sm-9 col-md-9">
-            <div class="form-group">
-                <label class=" control-label" >用户名:</label>
-                <input class="form-control required" type="text" placeholder="请输入用户名" name="username" autofocus="autofocus"/>
+
+<div id="particles">
+    <div id="intro" style="top: 50%;">
+        <div class="container">
+            <div class="form row">
+                <div>
+                    <p th:text="${register_information}" style="color: red" align="center">这里是信息提示.</p>
+                </div>
+                <div class="form-title" align="center">
+                    <h2>影院放映质量信息服务系统</h2>
+                </div>
+                <form class="form-horizontal" id="register_form" action="/registering" method="post">
+                    <div class="form-box  col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                                </div>
+                                <input class="form-control" type="text" placeholder="请输入用户名" name="username" autofocus="autofocus"/>
+                            </div>
+                        </div>
+                        <div>
+                            <p th:text="${username}" style="color: red" align="center">这里是信息提示.</p>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+                                </div>
+                                <input class="form-control" type="password" placeholder="请输入6-12位密码" id="register_password" name="password"/>
+                            </div>
+                        </div>
+                        <div>
+                            <p th:text="${password}" style="color: red" align="center">这里是信息提示.</p>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+                                </div>
+                                <input class="form-control" type="password" placeholder="请保持两次密码一致" name="password1"/>
+                            </div>
+                        </div>
+                        <div>
+                            <p th:text="${password1}" style="color: red" align="center">这里是信息提示.</p>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+                                </div>
+                                <input class="form-control required" type="text" placeholder="QQ" name="QQ"/>
+                            </div>
+                        </div>
+                        <div>
+                            <p th:text="${qq}" style="color: red" align="center">这里是信息提示.</p>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <span class="glyphicon glyphicon-gift" style="font-weight: bold;" aria-hidden="true"></span>
+                                </div>
+                                <div class="radio ">
+                                    <label>
+                                        <input type="radio" name="sex" value="boy" checked>男
+                                    </label>
+                                    <label>
+                                        <input type="radio" name="sex" value="girl">女
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+                                </div>
+                            <input class="form-control required" type="date" name="birthday" >
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                                </div>
+                            <input class="form-control required" type="text" placeholder="介绍自己" name="myself">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input type="button" style="background-color: #007bff; border-color: #007bff; color: white" class="btn btn-info pull-left" id="back" value="返回"/>
+            <!--                <input type="reset" class="btn btn-info pull-left"  value="重置"/>-->
+                            <input type="submit"  style="background-color: #007bff; border-color: #007bff; color: white" class="btn btn-success pull-right" value="注册 "/>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label class=" control-label" >密码:</label>
-                <input class="form-control required" type="password" placeholder="请输入6-12位密码" id="register_password" name="password"/>
-            </div>
-            <div class="form-group">
-                <label class=" control-label" >确认密码:</label>
-                <input class="form-control required" type="password" placeholder="请保持两次密码一致" name="password1"/>
-            </div>
-            <div class="form-group">
-                <label class=" control-label" >QQ:</label>
-                <input class="form-control required" type="text" placeholder="请输入QQ" name="QQ"/>
-            </div>
-            <div class="form-group">
-                <label class=" control-label">性别:</label>
-                <input type="radio" name="sex" value="boy" checked><b>男</b>
-                <input type="radio" name="sex" value="girl"><b>女</b>
-            </div>
-            <div class="form-group">
-                <label class="control-label">生日:</label>
-                <input class="form-control required" type="date" name="birthday" >
-            </div>
-            <div class="form-group">
-                <label class=" control-label">自我介绍:</label>
-                <input class="form-control required" type="text" placeholder="介绍自己" name="myself">
-            </div>
-            <div class="form-group">
-                <input type="button" class="btn btn-info pull-left" id="back" value="返回"/>
-<!--                <input type="reset" class="btn btn-info pull-left"  value="重置"/>-->
-                <input type="submit" class="btn btn-success pull-right" value="注册 "/>
-            </div>
-        </div>
-    </form>
-</div>
-</div>
 <script type="text/javascript" src="js/main.js" ></script>
 </body>
 </html>
